# HwLoad

./: .gitignore  CMakeLists.txt  LoadConfig.hpp  LoadControl.cpp  LoadControl.hpp  LoadGenerator.hpp  README.md  cpu_load_generator.py  gpu_load_generator.py  load.py  load_config.py  load_generator.py  main.cpp  main.py  set_env.sh
CPU/: CPULoadGenerator.cpp  CPULoadGenerator.hpp  CPUReal.cpp
GPU/: GPULoadGenerator.cu  GPULoadGenerator.exp  GPULoadGenerator.hpp  GPULoadGenerator.lib  GPUReal.cu
NPU/: NPULoadGenerator.cpp  NPULoadGenerator.hpp  npu_load_npu.py  npu_load_worker.py  npu_load_worker_0.py  npu_train.py  run.sh  run_npu.sh  set_env.sh
